--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ARP Scan Results</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/js/all.min.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="app.css"> <!-- Include fișierul CSS -->
+    <link rel="stylesheet" href="app.css">
 </head>
 <body>
     <h1>{{ wifi_details['SSID'] }}</h1>
@@ -56,6 +56,10 @@
                 <tr>
                     <td>{{ wifi.Name }}</td>
                     <td>{{ wifi.Password }}</td>
+                </tr>
+                {% else %}
+                <tr>
+                    <td colspan="2">No saved Wi-Fi passwords found.</td>
                 </tr>
                 {% endfor %}
             </tbody>
